--- a/projects/clubs-hfc.html
+++ b/projects/clubs-hfc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>Hydrogen Fuel Cell | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -341,15 +341,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">Hydrogen Fuel Cell System Design</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
+                    <span class="skill-tag">CFD Analysis</span>
                     <span class="skill-tag">Project Management</span>
+                    <span class="skill-tag">CAM Programming</span>
                     <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">Team Leadership</span>
                 </div>
             </div>
         </header>
@@ -357,33 +357,37 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>As the Hydrogen Lead for the UCLA Supermileage Vehicle team, I needed to design and implement a hydrogen fuel cell system that could meet our 1 kW power requirement for the competition vehicle. The system needed to be efficient, safe, and properly integrated with the rest of the vehicle while passing strict technical inspections.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>Led multiple project teams through the complete development cycle:</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>Managed and coordinated 3 project teams consisting of over 30 members, strategically dividing work based on individual strengths</li>
+                    <li>Conducted detailed CFD simulations using Ansys Fluent to optimize the flowfield design for effective water removal and mass transfer</li>
+                    <li>Created CAM programs with HSMWorks for in-house manufacturing on our 3-axis CNC machine</li>
+                    <li>Oversaw the successful integration of the Horizon Fuel Cell with the competition vehicle</li>
+                    <li>Developed comprehensive documentation using Notion workspace and presentation slides for knowledge transfer</li>
                 </ul>
+                
+                <!-- Image placeholder could go here -->
+                <!-- <img src="path_to_image.jpg" alt="Hydrogen Fuel Cell System" class="project-image"> -->
             </div>
         </section>
 
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>The hydrogen fuel cell system achieved several key milestones:</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>Successfully met the 1 kW power requirement for the competition vehicle</li>
+                    <li>Passed all hydrogen technical inspections for competition compliance</li>
+                    <li>Reduced manufacturing costs by over $200 through in-house CNC production</li>
+                    <li>Optimized flowfield design for efficient water removal and mass transfer</li>
+                    <li>Established robust documentation system for future team reference</li>
                 </ul>
             </div>
         </section>
@@ -393,10 +397,11 @@
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>Managing large teams and coordinating multiple concurrent projects</li>
+                    <li>Importance of simulation-driven design in fluid systems</li>
+                    <li>Balance between cost reduction and system performance</li>
+                    <li>Value of comprehensive documentation for knowledge transfer</li>
+                    <li>Technical considerations for hydrogen system safety and compliance</li>
                 </ul>
             </div>
         </section>
