--- a/projects/clubs-mk9cb.html
+++ b/projects/clubs-mk9cb.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>Mk 9 CV Boot | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -341,15 +341,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">CV Boot Mold Design & Manufacturing</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
-                    <span class="skill-tag">Project Management</span>
-                    <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">Mold Design</span>
+                    <span class="skill-tag">Design Iteration</span>
+                    <span class="skill-tag">Cost Reduction</span>
+                    <span class="skill-tag">Manufacturing</span>
+                    <span class="skill-tag">Material Science</span>
                 </div>
             </div>
         </header>
@@ -357,33 +357,37 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>As part of Bruin Formula Racing, I needed to design and manufacture custom CV boots to protect the constant velocity joints on our Formula SAE vehicle. The existing boots were dysfunctional, and commercial replacements were costly. The solution needed to be reliable, cost-effective, and manufacturable using our available resources.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>Led the development through multiple design iterations:</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>Designed an innovative mold featuring a novel dovetail slider mechanism for efficient boot production</li>
+                    <li>Iterated through 5 versions of the mold design, continuously improving functionality and ease of use</li>
+                    <li>Created custom pouring processes and procedures for consistent boot production</li>
+                    <li>Engineered the mold for easy release and minimal post-processing of finished boots</li>
+                    <li>Developed quality control measures to ensure boots met performance requirements</li>
                 </ul>
+                
+                <!-- Image placeholder could go here -->
+                <!-- <img src="path_to_image.jpg" alt="CV Boot Mold Design" class="project-image"> -->
             </div>
         </section>
 
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>The CV boot project achieved several key improvements:</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>Successfully replaced dysfunctional CV boots with reliable custom-made alternatives</li>
+                    <li>Reduced CV boot costs by 50% compared to commercial options</li>
+                    <li>Created a repeatable manufacturing process through dovetail slider mechanism</li>
+                    <li>Achieved consistent quality across multiple boot productions</li>
+                    <li>Developed a solution that could be easily replicated by future team members</li>
                 </ul>
             </div>
         </section>
@@ -393,10 +397,11 @@
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>Importance of iterative design in complex mold development</li>
+                    <li>Balance between material properties and manufacturing constraints</li>
+                    <li>Cost optimization through in-house manufacturing</li>
+                    <li>Value of innovative mechanical solutions like the dovetail slider</li>
+                    <li>Documentation of manufacturing processes for knowledge transfer</li>
                 </ul>
             </div>
         </section>
