--- a/projects/index.html
+++ b/projects/index.html
@@ -527,7 +527,7 @@
             <h2>Research</h2>
             <div class="projects-grid">
                 <a href="research-pdmsch.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/research-project.jpg')">
+                    <div class="project-card" style="background-image: url('/projects/images/pdmsch/pdmsch-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">PDMS Chip/Housing</h2>
                         <p class="project-aff">Beel Research Group</p>
@@ -543,7 +543,7 @@
             <h2>Personal Projects</h2>
             <div class="projects-grid">
                 <a href="personal-pp.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                    <div class="project-card" style="background-image: url('/projects/images/pp/pp-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Pen Plotter</h2>
                         <p class="project-description">Custom CoreXY pen plotter featuring 3D-printed recirculating ball linear rails with integrated GCode processing.</p>
@@ -552,7 +552,7 @@
                     </div>
                 </a>
                 <a href="personal-egk.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                    <div class="project-card" style="background-image: url('/projects/images/egk/egk-cover.png')">
                         <span class="project-year">2024</span>
                         <h2 class="project-title">Electric Go Kart</h2>
                         <p class="project-description">Budget-friendly electric go kart featuring single wheel steering.</p>
@@ -561,7 +561,7 @@
                     </div>
                 </a>
                 <a href="personal-fdu.html" class="project-link">
-                    <div class="project-card" style="background-image: url('/images/personal-project.jpg')">
+                    <div class="project-card" style="background-image: url('/projects/images/fdu/fdu-cover.png')">
                         <span class="project-year">2023</span>
                         <h2 class="project-title">Fingerprint Dorm Unlocker</h2>
                         <p class="project-description">Arduino-based fingerprint authentication system for automated door unlocking.</p>
