--- a/projects/personal-egk.html
+++ b/projects/personal-egk.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>Electric Go Kart | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -341,15 +341,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">3-Wheeled Electric Go-Kart</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
-                    <span class="skill-tag">Project Management</span>
-                    <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">Manufacturing</span>
+                    <span class="skill-tag">Team Leadership</span>
+                    <span class="skill-tag">Cost Optimization</span>
+                    <span class="skill-tag">Design Innovation</span>
+                    <span class="skill-tag">Metal Fabrication</span>
                 </div>
             </div>
         </header>
@@ -357,33 +357,37 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>Leading a team of 4, we needed to design, analyze, and build a three-wheeled electric go-kart capable of reaching speeds between 10-15 mph. The project required innovative solutions to reduce weight and cost while maintaining performance, with a goal of using recycled materials wherever possible to minimize expenses.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>Led the complete development cycle using various manufacturing processes:</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>Designed an innovative single wheel steering system utilizing a bevel gear mechanism, achieving significant weight reduction compared to traditional steering systems</li>
+                    <li>Utilized multiple manufacturing processes including plasma cutting, band saw operation, drill press work, milling, laser cutting, and 3D printing</li>
+                    <li>Sourced and repurposed recycled materials to maintain project budget under $100</li>
+                    <li>Engineered custom components to integrate electric drive system with the chassis</li>
+                    <li>Coordinated team efforts across design, fabrication, and assembly phases</li>
                 </ul>
+                
+                <!-- Image placeholder could go here -->
+                <!-- <img src="path_to_image.jpg" alt="Electric Go-Kart" class="project-image"> -->
             </div>
         </section>
 
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>The go-kart project achieved several key milestones:</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>Successfully achieved target speed range of 10-15 mph</li>
+                    <li>Completed entire project under $100 budget through creative material sourcing</li>
+                    <li>Developed innovative single wheel steering solution with bevel gear mechanism</li>
+                    <li>Achieved significant weight savings compared to competitor designs</li>
+                    <li>Successfully integrated electric drive system with custom chassis</li>
                 </ul>
             </div>
         </section>
@@ -393,10 +397,11 @@
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>Creative problem-solving under strict budget constraints</li>
+                    <li>Integration of multiple manufacturing processes in a single project</li>
+                    <li>Importance of material selection and recycling in cost reduction</li>
+                    <li>Team leadership and project coordination skills</li>
+                    <li>Balance between innovation and practicality in design decisions</li>
                 </ul>
             </div>
         </section>
