--- a/projects/personal-pp.html
+++ b/projects/personal-pp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>Pen Plotter | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -341,15 +341,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">CoreXY Pen Plotter Design</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
-                    <span class="skill-tag">Project Management</span>
-                    <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">3D Printing</span>
+                    <span class="skill-tag">Software Development</span>
+                    <span class="skill-tag">Mechanical Design</span>
+                    <span class="skill-tag">Image Processing</span>
+                    <span class="skill-tag">Arduino Programming</span>
                 </div>
             </div>
         </header>
@@ -357,33 +357,37 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>I set out to design and build a custom pen plotter using the CoreXY belt configuration, which needed to achieve precise, low-friction movement for accurate drawing. The project required integrating mechanical design, software development, and electronics into a cohesive system capable of converting digital images into physical artwork.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>Developed the complete system from concept to working prototype:</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>Designed and 3D printed a custom CoreXY belt configuration system featuring innovative fully 3D-printable recirculating ball bearing linear rails</li>
+                    <li>Created a custom bitmap image processing system in Java that converts images into optimized G-Code specifically for CoreXY movement patterns</li>
+                    <li>Implemented real-time G-Code communication and interpretation system using Python and C++ on Arduino</li>
+                    <li>Engineered a low-friction movement system that maintains high precision while using 3D printed components</li>
+                    <li>Integrated electronics and mechanical systems to ensure smooth, uninterrupted operation during plotting</li>
                 </ul>
+                
+                <!-- Image placeholder could go here -->
+                <!-- <img src="path_to_image.jpg" alt="CoreXY Pen Plotter" class="project-image"> -->
             </div>
         </section>
 
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>The pen plotter project achieved several key technical milestones:</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>Successfully created fully 3D-printable recirculating ball bearing linear rails</li>
+                    <li>Developed efficient image-to-G-Code conversion pipeline optimized for CoreXY kinematics</li>
+                    <li>Achieved precise, low-friction movement for accurate drawing reproduction</li>
+                    <li>Implemented uninterrupted real-time communication between computer and plotter</li>
+                    <li>Created a modular design allowing for easy maintenance and future upgrades</li>
                 </ul>
             </div>
         </section>
@@ -393,10 +397,11 @@
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>Integration of mechanical, electrical, and software systems</li>
+                    <li>Optimization of 3D printed mechanical components for precision movement</li>
+                    <li>Image processing and G-Code generation algorithms</li>
+                    <li>Real-time communication protocols between computer and microcontroller</li>
+                    <li>Design considerations for printability and assembly of complex mechanisms</li>
                 </ul>
             </div>
         </section>
