--- a/projects/research-pdmsch.html
+++ b/projects/research-pdmsch.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>PDMS Chip/Housing | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -341,15 +341,15 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">Xenopus Embryo Sorter Design</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
-                    <span class="skill-tag">Project Management</span>
-                    <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">Microfluidics</span>
+                    <span class="skill-tag">SLA Printing</span>
+                    <span class="skill-tag">FDM Printing</span>
+                    <span class="skill-tag">PDMS Casting</span>
+                    <span class="skill-tag">Hardware Integration</span>
                 </div>
             </div>
         </header>
@@ -357,33 +357,37 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>As a Research Intern at Stanford University's Beel Research Group, I needed to design and manufacture hardware components for a computer vision-based Xenopus embryo sorter. The system needed to efficiently sort 50 eggs per second with 99% accuracy, requiring precise microfluidics design and careful integration of imaging components.</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>Led the development of the microfluidics and hardware systems:</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>Designed an innovative PDMS-based microfluidics chip featuring a serpentine flow channel for controlled embryo movement</li>
+                    <li>Integrated a quake valve sorter mechanism to enable precise and rapid embryo sorting</li>
+                    <li>Created and optimized molds using SLA printing technology for precise PDMS chip casting</li>
+                    <li>Developed multiple iterations of FDM-printed housings to protect and align chip and electrical components</li>
+                    <li>Engineered the system to handle millimeter-wide Xenopus embryos while maintaining quick and accurate imaging capabilities</li>
                 </ul>
+                
+                <!-- Image placeholder could go here -->
+                <!-- <img src="path_to_image.jpg" alt="PDMS Microfluidics Chip" class="project-image"> -->
             </div>
         </section>
 
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>The embryo sorter project achieved several key milestones:</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>Successfully designed a microfluidics system capable of handling delicate Xenopus embryos</li>
+                    <li>Achieved target throughput of 50 eggs per second</li>
+                    <li>Maintained 99% sorting accuracy through precise flow control and imaging alignment</li>
+                    <li>Created reliable and reproducible PDMS chip casting process</li>
+                    <li>Developed modular housing design allowing for easy maintenance and component replacement</li>
                 </ul>
             </div>
         </section>
@@ -393,10 +397,11 @@
             <div class="section-content">
                 <p>This project provided valuable insights into:</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>Design considerations for microfluidics systems handling biological specimens</li>
+                    <li>Integration of multiple manufacturing processes (SLA, FDM, PDMS casting)</li>
+                    <li>Optimization of flow channels for precise specimen handling</li>
+                    <li>Balance between speed and accuracy in automated sorting systems</li>
+                    <li>Importance of modular design in research equipment</li>
                 </ul>
             </div>
         </section>
