--- a/projects/clubs-hfc.html
+++ b/projects/clubs-hfc.html
@@ -77,7 +77,7 @@
         .project-header {
             margin-bottom: 40px;
             border-bottom: 1px solid var(--line-color-light);
-            padding-top: 100px;
+            padding-top: 70px;
             padding-bottom: 20px;
         }
 
@@ -266,14 +266,19 @@
             }
 
             .back-button {
-                position: static;
-                display: inline-flex;
+                left: 30px;
+                position: fixed;
+                /* display: inline-flex; */
                 margin-bottom: 20px;
+            }
+            .project-header {
+                padding-top: 10px;
             }
 
             .table-of-contents {
                 position: static;
                 width: 100%;
+                margin-top: 70px;
                 margin-bottom: 30px;
                 border-radius: 0;
                 box-shadow: none;
