--- a/projects/personal-lr.html
+++ b/projects/personal-lr.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Suspension Design | Terry Yu</title>
+    <title>FILLER | Terry Yu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Project">
     <style>
@@ -346,15 +346,12 @@
 
     <main>
         <header class="project-header">
-            <h1 class="project-title">FSAE Suspension Design</h1>
+            <h1 class="project-title">FILLERTITLE</h1>
             <div class="skills-section">
                 <h2 class="skills-title">Skills Gained</h2>
                 <div class="skills-list">
-                    <span class="skill-tag">CAD Modeling</span>
-                    <span class="skill-tag">FEA Analysis</span>
-                    <span class="skill-tag">Project Management</span>
-                    <span class="skill-tag">Technical Documentation</span>
-                    <span class="skill-tag">Manufacturing Processes</span>
+                    <span class="skill-tag">FILLERSKILLS</span>
+                    <span class="skill-tag">FILLERSKILLS</span>
                 </div>
             </div>
         </header>
@@ -362,20 +359,17 @@
         <section id="problem" class="content-section">
             <h2 class="section-title">Problem Statement</h2>
             <div class="section-content">
-                <p>The Formula SAE team needed to design and implement a new suspension system that would improve vehicle handling while maintaining compliance with competition regulations. The system needed to be lightweight, adjustable, and manufacturable within our constraints.</p>
+                <p>FILLERDESCRIPTION</p>
             </div>
         </section>
 
         <section id="work" class="content-section">
             <h2 class="section-title">My Work</h2>
             <div class="section-content">
-                <p>Led the suspension design team through the complete development cycle:</p>
+                <p>FILLERDESCRIPTION</p>
                 <ul>
-                    <li>Conducted kinematic analysis using simulation software</li>
-                    <li>Created detailed CAD models of all components</li>
-                    <li>Performed FEA to validate design decisions</li>
-                    <li>Coordinated with manufacturing team for production</li>
-                    <li>Developed testing protocols for validation</li>
+                    <li>FILLERWORK</li>
+                    <li>FILLERWORK</li>
                 </ul>
             </div>
         </section>
@@ -383,12 +377,10 @@
         <section id="results" class="content-section">
             <h2 class="section-title">Results</h2>
             <div class="section-content">
-                <p>The new suspension system achieved several key improvements:</p>
+                <p>FILLERDESCRIPTION</p>
                 <ul>
-                    <li>20% reduction in overall weight</li>
-                    <li>Improved cornering performance by 15%</li>
-                    <li>Enhanced adjustability for different track conditions</li>
-                    <li>Successfully passed all technical inspections</li>
+                    <li>FILLERRESULTS</li>
+                    <li>FILLERRESULTS</li>
                 </ul>
             </div>
         </section>
@@ -396,12 +388,10 @@
         <section id="lessons" class="content-section">
             <h2 class="section-title">Lessons Learned</h2>
             <div class="section-content">
-                <p>This project provided valuable insights into:</p>
+                <p>FILLERDESCRIPTION</p>
                 <ul>
-                    <li>Balancing theoretical design with practical constraints</li>
-                    <li>Importance of iterative testing and refinement</li>
-                    <li>Value of clear documentation and communication</li>
-                    <li>Managing timeline and resource constraints</li>
+                    <li>FILLERLESSON</li>
+                    <li>FILLERLESSON</li>
                 </ul>
             </div>
         </section>
